[tool.poetry]
name = "Baigga"
version = "0.1.0"
description = "Um blog de videogames com um layout retrô."
authors = ["Crissky"]
license = "Proprietário"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.1 <3.11.0"
nikola = ">=8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"